changed redirect uri

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "jamming",
-  "homepage": "https://ti-co.github.io/music-app/",
+  "homepage": "https://ti-co.github.io/jamming/",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
